crates/recite-import/tests/snapshots/import__lines.json.snap
---
source: crates/recite-import/tests/import.rs
expression: report
---
{
  "format_version": 1,
  "family": "json",
  "file": "lines.json",
  "status": "complete",
  "source": ":: block_251f784003e99ce41e11 default\n> arrival@11111111111111111111 speaker=operator\n  The station is quiet.\n-> block_d52f95899b0f3232aa1b\n:: block_d52f95899b0f3232aa1b\n> reply@11111111111111111112 speaker=operator\n  The signal returns.\n-> END\n",
  "mappings": [
    {
      "provenance": {
        "file": "lines.json",
        "location": {
          "kind": "json",
          "pointer": "/0/node"
        },
        "record_key": "0"
      },
      "construct": "block",
      "original_id": "Start",
      "generated_id": "block_251f784003e99ce41e11",
      "generated_line": 1
    },
    {
      "provenance": {
        "file": "lines.json",
        "location": {
          "kind": "json",
          "pointer": "/0/text"
        },
        "record_key": "0"
      },
      "construct": "line",
      "original_id": "arrival@11111111111111111111",
      "generated_id": "arrival@11111111111111111111",
      "generated_line": 2
    },
    {
      "provenance": {
        "file": "lines.json",
        "location": {
          "kind": "json",
          "pointer": "/0/next"
        },
        "record_key": "0"
      },
      "construct": "jump",
      "original_id": null,
      "generated_id": "block_d52f95899b0f3232aa1b",
      "generated_line": 4
    },
    {
      "provenance": {
        "file": "lines.json",
        "location": {
          "kind": "json",
          "pointer": "/1/node"
        },
        "record_key": "1"
      },
      "construct": "block",
      "original_id": "End",
      "generated_id": "block_d52f95899b0f3232aa1b",
      "generated_line": 5
    },
    {
      "provenance": {
        "file": "lines.json",
        "location": {
          "kind": "json",
          "pointer": "/1/text"
        },
        "record_key": "1"
      },
      "construct": "line",
      "original_id": "reply@11111111111111111112",
      "generated_id": "reply@11111111111111111112",
      "generated_line": 6
    },
    {
      "provenance": {
        "file": "lines.json",
        "location": {
          "kind": "json",
          "pointer": "/1/next"
        },
        "record_key": "1"
      },
      "construct": "jump",
      "original_id": null,
      "generated_id": "END",
      "generated_line": 8
    }
  ],
  "items": [],
  "native_diagnostics": []
}
