crates/recite-import/tests/snapshots/import__nodes.yarn.snap
---
source: crates/recite-import/tests/import.rs
expression: report
---
{
  "format_version": 1,
  "family": "yarn",
  "file": "nodes.yarn",
  "status": "complete",
  "source": ":: block_8a6a5e4aa00b3e0e8a22 default\n> imported_11111111111111111111@11111111111111111111 speaker=Operator\n  The station is quiet.\n-> block_84c6cba86edbf7cfebe3\n:: block_84c6cba86edbf7cfebe3\n> imported_b0768775af1954b32bad@b0768775af1954b32bad speaker=Operator\n  The signal returns.\n-> END\n",
  "mappings": [
    {
      "provenance": {
        "file": "nodes.yarn",
        "location": {
          "kind": "text",
          "span": {
            "file": "nodes.yarn",
            "start": {
              "line": 1,
              "column": 1
            },
            "end": {
              "line": 1,
              "column": 13
            }
          }
        },
        "record_key": "1"
      },
      "construct": "block",
      "original_id": "Start",
      "generated_id": "block_8a6a5e4aa00b3e0e8a22",
      "generated_line": 1
    },
    {
      "provenance": {
        "file": "nodes.yarn",
        "location": {
          "kind": "text",
          "span": {
            "file": "nodes.yarn",
            "start": {
              "line": 3,
              "column": 1
            },
            "end": {
              "line": 3,
              "column": 59
            }
          }
        },
        "record_key": "3"
      },
      "construct": "line",
      "original_id": "11111111111111111111",
      "generated_id": "imported_11111111111111111111@11111111111111111111",
      "generated_line": 2
    },
    {
      "provenance": {
        "file": "nodes.yarn",
        "location": {
          "kind": "text",
          "span": {
            "file": "nodes.yarn",
            "start": {
              "line": 4,
              "column": 1
            },
            "end": {
              "line": 4,
              "column": 13
            }
          }
        },
        "record_key": "4"
      },
      "construct": "jump",
      "original_id": null,
      "generated_id": "block_84c6cba86edbf7cfebe3",
      "generated_line": 4
    },
    {
      "provenance": {
        "file": "nodes.yarn",
        "location": {
          "kind": "text",
          "span": {
            "file": "nodes.yarn",
            "start": {
              "line": 6,
              "column": 1
            },
            "end": {
              "line": 6,
              "column": 11
            }
          }
        },
        "record_key": "6"
      },
      "construct": "block",
      "original_id": "End",
      "generated_id": "block_84c6cba86edbf7cfebe3",
      "generated_line": 5
    },
    {
      "provenance": {
        "file": "nodes.yarn",
        "location": {
          "kind": "text",
          "span": {
            "file": "nodes.yarn",
            "start": {
              "line": 8,
              "column": 1
            },
            "end": {
              "line": 8,
              "column": 30
            }
          }
        },
        "record_key": "8"
      },
      "construct": "line",
      "original_id": null,
      "generated_id": "imported_b0768775af1954b32bad@b0768775af1954b32bad",
      "generated_line": 6
    }
  ],
  "items": [],
  "native_diagnostics": []
}
